tests/NormalTests/paczka1/fuzzy1/50129877.err
Error in line 2: vDuXut4Sw S575 65,6
Error in line 9: VWr4 S}8 10,6
Error in line 10: A441 S!44 6!,7
Error in line 3: VWr4 S28 7,0
Error in line 11: A441 S544 74,2
Error in line 13: 3Xn A441 47,5
Error in line 22: JcKEV7ICza S575 216,29
Error in line 31: vDuXut4Sw A441 36,3
